# rfserver

./: .gitignore  CMakeLists.txt  Makefile  README.md  toolchain.sh
include/: command.h  http.h  rf.h
lib/mongoose/: mongoose_config.h
src/: command.c  http.c  main.c  rf.c
